--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "php": ">=5.6.0",
         "laravel/framework": "^5.5|~6.0",
         "pimple/pimple": "~3.0",
-        "monolog/monolog": "~1.4,>=1.4.1",
+        "monolog/monolog": "~2.0",
         "league/flysystem": "^1.0.45",
         "league/flysystem-aws-s3-v3": "^1.0.13",
         "league/flysystem-cached-adapter": "^1.0.6",
